--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "description": "",
   "devDependencies": {
     "lite-server": "^2.6.1"
+  },
+  "dependencies": {
+    "typescript_tutorial": "file:"
   }
 }
